# langgraph-surrealdb

./: .env.test.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
src/langgraph_checkpoint_surreal/: __init__.py
src/langgraph_checkpoint_surreal/checkpoint/: __init__.py  aio.py  base.py
src/langgraph_checkpoint_surreal/database/: __init__.py  common.py  interface.py
src/langgraph_checkpoint_surreal/database/models/: checkpoint.py  write.py
src/langgraph_checkpoint_surreal/database/repository/: checkpoints.py  writes.py
src/langgraph_surrealdb/: __init__.py
src/langgraph_surrealdb/checkpoint/: __init__.py  aio.py  base.py  config.py
src/langgraph_surrealdb/database/: __init__.py  common.py
src/langgraph_surrealdb/database/models/: __init__.py  checkpoint.py  write.py
src/langgraph_surrealdb/database/repository/: checkpoints.py  writes.py
tests/: conftest.py  test_aiosqlite.py  test_asyncsurealsaver.py  test_conformance.py  test_conformance_delta.py  test_db_models.py  test_delta_channel_migration.py  test_get_delta_channel_history.py  test_sqlite.py  test_surealsaver.py
