[project]
name = "langgraph-surrealdb"
version = "0.1.0"
description = "SurrealDB storage backend for LangGraph."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ['LICENSE']

dependencies = [
    "pydantic>=2.10.6",
    "langgraph>=1.1.6",
    "langgraph-checkpoint>=4.1.0,<5.0.0",
    "surrealdb>=1.0.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-dotenv",
]

lint = [
  "ruff",
  "black",
  "ty",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
  "langgraph-checkpoint-conformance>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_surrealdb"]

[tool.uv]
default-groups = ['dev']

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"
env_files = [".env.test"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008"]
target-version = "py310"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-key = "ignore"
invalid-method-override = "ignore"
invalid-return-type = "ignore"
invalid-yield = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
unused-type-ignore-comment = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unsupported-operator = "ignore"

[tool.pytest-watcher]
now = true
delay = 0.1
runner_args = ["--ff", "-v", "--tb", "short"]
patterns = ["*.py"]
